# discord-coo-bot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DISCORD_ENVIRONMENT.md  README.legacy.md  README.md  ROADMAP.md  bootstrap_discord_env.py  channels.json  discord-coo.service  discord_coo_bot.py  discord_coo_looptest.py  discord_coo_selfcheck.py  discord_coo_selftest_stage1.py  propose_doc_change.py  push_repos.sh  pyproject.toml  register_cockpit_commands.py  run_discord_coo.sh  watch_discord_coo.sh
coo/: cli.py  db.py  developer.py  install.py  integration.py  paths.py  tenant.py
integrations/: README.md
integrations/echo/: manifest.json  schema.sql
integrations/echo/plugin/: __init__.py
integrations/hubspot/: manifest.json  schema.sql
integrations/hubspot/plugin/: __init__.py
messaging/: README.md
messaging/discord/plugin/: coo_phase1.py  run_ai.sh
platform/schema/: 0001_platform.sql  0002_integration_modes.sql
tenant/schema/: 0001_core.sql  0002_proactive.sql  seed.sql
tests/: conftest.py  test_db_writes.py  test_parsers.py  test_schemas.py
