[project]
name = "coo"
version = "0.1.0"
description = "Multi-tenant COO agent platform CLI"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.scripts]
coo = "coo.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coo"]
